[project]
name = "zb-shared"
version = "0.2.0"
description = "Geteilte Bibliotheken fuer Zitzelsberger-Apps (kanonischer KI-Client + Audit-Libs: mailer, pdf). Konsolidierung P2.2/P2.3, [d-303]."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "google-auth>=2.0",
    "anthropic[vertex]>=0.49",
]

[project.optional-dependencies]
pdf = ["xhtml2pdf>=0.2.16"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zb_shared*"]
